[project]
name = "pandas"
version = "0.1.0"
description = ""
authors = [
    {name = "Jun-te Kim",email = "junte@domna.homes"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

