[project]
name = "pandas_is_for_everyone"
version = "0.1.0"
description = ""
authors = [
    {name = "Jun-te Kim",email = "junte@mealcraft.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

